# mive

./: .dockerignore  .env.example  .gitignore  Dockerfile.backend  LICENSE  README.md  docker-compose.yml  log_config.json  package-lock.json  package.json  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py
config/: matterbridge.example.toml
docker/: matterbridge.dockerfile
docs/import-prompts/: elements.md  graph-characters-relations.md  world-fields.md
frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
frontend/e2e/: admin.spec.ts  characters.spec.ts  chat.spec.ts  events.spec.ts  fixtures.ts  global-setup.ts  global-teardown.ts  graph.spec.ts  tsconfig.json  worlds.spec.ts
frontend/src/: App.vue  i18n.ts  main.ts
src/: config.py  debug_logger.py  log_filters.py  main.py
src/api/: admin.py  admin_config.py  auth.py  character_material.py  characters.py  chat_sessions.py  conditional_cache.py  deps.py  discord_bridge.py  elements.py  error_handlers.py  events.py  graph.py  graph_command.py  guide.py  import_.py  m6_graph.py  matterbridge.py  memories.py  messages.py  relations.py  versions.py  welcome_quotes.py  worlds.py
src/db/: models.py  session.py
src/discord_bot/: __main__.py  dispatcher.py  parser.py  sender.py  webhook_manager.py
src/domain/: clock.py  events.py  material.py
src/llm/: anthropic_provider.py  base.py  embedding_provider.py  factory.py  json_repair.py  (+6 more)
tests/: conftest.py  factories.py  helpers.py
(+277 files in other folders)
