[project]
name = "mive"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "anthropic>=0.49",
    "openai>=1.70",
    "tavily-python>=0.5",
    "httpx>=0.28",
    "markdownify>=0.14",
    "zep-cloud>=3.0",
    "bcrypt>=4.0",
    "cryptography>=42.0",
    "python-jose[cryptography]>=3.3",
    "python-multipart>=0.0.9",
    "redis[asyncio]>=5.0",
    "discord.py>=2.4",
    "pgvector>=0.3.0",
    "jieba>=0.42.1",
    "opencc-python-reimplemented>=0.1.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "ruff>=0.9",
    "mypy>=1.14",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]
markers = [
    "llm: 直接调用真实 LLM API 的集成测试（需设置 LLM_API_KEY）",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B"]
ignore = ["B008"]  # FastAPI Depends() in argument defaults is standard pattern

[tool.pyright]
venvPath = "."
venv = ".venv"
include = ["src"]
